# StarTrace

./: .gitignore  README.md  pyproject.toml  pytest.ini
Legacy/: startrace-0.1.0-py3-none-any.whl  startrace-0.1.1-py3-none-any.whl  startrace-0.1.2-py3-none-any.whl  startrace-0.1.3-py3-none-any.whl  startrace-0.1.4-py3-none-any.whl  startrace-0.1.5-py3-none-any.whl  startrace-0.1.6-py3-none-any.whl  startrace-0.1.7-py3-none-any.whl  startrace-1.0.0-py3-none-any.whl  startrace-1.1.0-py3-none-any.whl  startrace-2.0.0b1-py3-none-any.whl  startrace-2.0.1-py3-none-any.whl  startrace-2.0.2-py3-none-any.whl  startrace-2.0.3-py3-none-any.whl  startrace-2.0.4-py3-none-any.whl  startrace-2.1.0-py3-none-any.whl
src/StarTrace/: star_trace.py
src/startrace/: __init__.py  star_trace.py
src/startrace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: debug.py  test_star_trace.py
