[project]
name = "startrace"
version = "1.0.0"
description = "A lightweight string pattern tool"
authors = [{ name = "William Coker", email = "wdc23a@acu.edu" }]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"

dependencies = [
    "numpy"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
